# base_project

async-demo/: build.gradle.kts
claude_tutorial/: README.md
claude_tutorial/back/: build.gradle.kts
claude_tutorial/front/: package-lock.json
java_test/src/: Calculator.java
kafka/kafka-producer/: build.gradle.kts  settings.gradle.kts
python_tutorial/: sample.ipynb
react-tutorial-ts/: package-lock.json  package.json
react-tutorial-ts/src/: App.css  App.tsx  MyButton.tsx  Profile.tsx  ShoppingList.tsx
tutor-claude/.claude/: settings.local.json
tutor-claude/DSA-tutor/: README.md  build.gradle  settings.gradle
tutor-claude/go-tutor/: .gitignore  ARCHITECTURE.md  FILES.md  LEARNING_GUIDE.md  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  go.mod
tutor-claude/hack-tutor/: README.md
tutor-claude/rust-tutor/actix-web-tutorial/: Cargo.toml  README.md  rust_syntax_guide.rs
tutor-claude/rust-tutor/actix-web-tutorial/.claude/: settings.local.json
tutor-claude/rust-tutor/actix-web-tutorial/01_basic/: Cargo.toml
tutor-claude/rust-tutor/actix-web-tutorial/01_basic/src/: main.rs
tutor-claude/rust-tutor/actix-web-tutorial/02_routing/: Cargo.toml
tutor-claude/rust-tutor/actix-web-tutorial/02_routing/src/: main.rs
tutor-claude/rust-tutor/actix-web-tutorial/03_request_response/: Cargo.toml
tutor-claude/rust-tutor/actix-web-tutorial/03_request_response/src/: main.rs
tutor-claude/rust-tutor/actix-web-tutorial/04_middleware/: Cargo.toml
tutor-claude/rust-tutor/actix-web-tutorial/04_middleware/src/: main.rs
tutor-claude/rust-tutor/actix-web-tutorial/05_state/: Cargo.toml
tutor-claude/rust-tutor/actix-web-tutorial/05_state/src/: main.rs
tutor-claude/rust-tutor/actix-web-tutorial/06_database/: Cargo.toml
tutor-claude/rust-tutor/actix-web-tutorial/06_database/src/: main.rs
tutor-claude/rust-tutor/actix-web-tutorial/07_error_handling/: Cargo.toml
tutor-claude/rust-tutor/actix-web-tutorial/07_error_handling/src/: main.rs
tutor-claude/rust-tutor/actix-web-tutorial/08_advanced/: Cargo.toml
tutor-claude/rust-tutor/actix-web-tutorial/08_advanced/src/: main.rs
(+596 files in other folders)
