[package]
name = "actix-08-advanced"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# WebSocket 지원 (actix-web 공식 WebSocket 지원)
actix-ws = "0.3"
# 비동기 스트림 유틸리티
futures-util = "0.3"
# 비동기 채널 (브로드캐스트)
tokio-stream = "0.1"
